fix: update text block background color and font size for improved visibility

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -856,16 +856,14 @@ a.gmail:hover {
     .text-block {
         position: absolute;
         bottom: 0;
-        background-color: #572E3A;
+        background-color: rgba(87, 46, 58, 0.9);
         /* Semi-transparent background */
-        opacity: 90%;
         color: white;
-        font-size: 12px;
+        font-size: 18px;
         text-align: center;
         width: 100%;
         /* Ensures it spans the entire width of the image */
-        padding: 10px 20px;
-        max-inline-size: 150px;
+        padding: 10px;
         box-sizing: border-box;
         /* Includes padding in width calculation */
     }
